# Temp

doc/: config_file
lab/src/: Aura.cpp  Aura.h  Characteristics.cpp  Characteristics.h  Construction.cpp  Construction.h  Construction_Enemy.cpp  Construction_Enemy.h  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  Game.cpp  Game.h  Landscape.cpp  Landscape.h  Makefile  Matrix.h  game  main.cpp
lab/tests/: CMakeLists.txt  testing.cpp
